# rocket-backend

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2024-05-21-111741_create_rustaceans/: up.sql
migrations/2024-05-21-111746_create_crates/: up.sql
migrations/2024-05-24-032845_create_users/: up.sql
migrations/2024-05-24-032850_create_roles/: up.sql
migrations/2024-05-24-032905_create_users_roles/: up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
