[package]
name = "rocket-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.6", features = ["chrono"]}
diesel-async = {version = "0.4.1", features = ["postgres"]}
chrono = {version = "0.4.38", features = ["serde"]}
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
rocket = {version = "0.5.0", features = ["json"]}
rocket_db_pools = {version = "0.1.0", features = ["diesel_postgres"]}

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"]}