[package]
name = "rocket-backend"
default-run = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.6", features = ["chrono"]}
diesel-async = {version = "0.4.1", features = ["postgres"]}
chrono = {version = "0.4.38", features = ["serde"]}
serde = {version = "1.0.202", features = ["derive"]}
serde_json = "1.0.117"
rocket = {version = "0.5.0", features = ["json"]}
rocket_db_pools = {version = "0.2.0", features = ["diesel_postgres","deadpool_redis"]}
clap = {version = "4.5.4", features = ["derive"]}
tokio = "1.37.0"
argon2 = "0.5.3"
rand = "0.8.5"

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json", "blocking"]}